--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
+    "cross-fetch": "^3.0.5",
     "firebase": "^7.16.0",
     "material-ui-popup-state": "^1.6.1",
     "node-sass": "^4.14.1",
@@ -17,7 +19,6 @@
     "react-bootstrap": "^1.1.1",
     "react-dom": "^16.13.1",
     "react-instagram-embed": "^1.5.0",
-    "react-player": "^2.6.0",
     "react-scripts": "3.4.1",
     "react-swipeable-views": "^0.13.9",
     "reactstrap": "^8.5.1"
